# ec2-api

./: AUTHORS  CMakeLists.txt  COPYING  README
ec2-api/: CMakeLists.txt  CurlCallback.cpp  CurlCallback.hpp  CurlRequest.cpp  CurlRequest.hpp  EC2Exception.hpp  RequestCore.cpp  RequestCore.hpp  RequestObserver.hpp  ResponseCore.cpp  ResponseCore.hpp  SimpleRequestObserver.hpp  ec2.cpp  ec2.hpp  http_response.hpp  sample.cpp  shared_ptr.hpp
ec2-api/parse/: CMakeLists.txt  element_error.hpp  error.hpp  parse.hpp  sample.cpp  state.hpp  types.hpp  util.hpp  warning.hpp
ec2-api/parse/type/: AuthorizeSecurityGroupIngressResponse.hpp  CreateSecurityGroupResponse.hpp  DescribeImagesResponse.hpp  DescribeInstancesResponse.hpp  DescribeSecurityGroupsResponse.hpp  EC2Response.hpp  Error.hpp  Response.hpp  RunInstancesResponse.hpp  TerminateInstancesResponse.hpp  groupSet.hpp  imagesSet.hpp  instancesSet.hpp  instancesState.hpp  ipPermissions.hpp  monitoring.hpp  placement.hpp  reservationSet.hpp  securityGroupInfo.hpp  stateReason.hpp  visitor_getter.hpp
ec2-api/parse/util/: cdata.hpp  expect.hpp  join.hpp  maybe.hpp  name_element.hpp  optional.hpp  read_bool.hpp  required.hpp  show_node_type.hpp  skip.hpp  unique.hpp  weparse.hpp
modules/: CompilerFlags.cmake  FindBoost.cmake  FindBotan.cmake  FindCURL_WIN32.cmake  FindCppUnit.cmake
src/: CMakeLists.txt  ec2-cmd.cpp  ec2-describe-images.cpp  ec2-describe-instances.cpp  ec2-run-instances.cpp  ec2-terminate-instances.cpp  ec2Command.cpp  ec2Command.hpp  options.cpp  options.hpp  options_ec2-describe-images.hpp  options_ec2-describe-instances.hpp  options_ec2-run-instances.hpp  options_ec2-terminate-instances.hpp  parse_cmdline.cpp  parse_cmdline.hpp
tests/: CMakeLists.txt  livetest.cpp  livetest.hpp  main.cpp  parsertest.cpp  parsertest.hpp  testconfig.hpp.in
tests/data/: AuthorizeSecurityGroupIngressResponse.1.xml  CreateSecurityGroupResponse.1.xml  DescribeImagesResponse.1.xml  DescribeInstancesResponse.1.xml  DescribeInstancesResponse.2.xml  DescribeInstancesResponse.3.xml  DescribeInstancesResponse.4.xml  DescribeSecurityGroupsResponse.1.xml  Response.AuthFailure.xml  Response.InvalidGroup.Duplicate.xml  Response.InvalidGroup.NotFound.xml  Response.UnknownParameter.xml  RunInstancesResponse.1.xml  RunInstancesResponse.2.xml  TerminateInstancesResponse.1.xml
